<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="JobEventReport" Id="{08b284db-6032-4be2-b608-7661b7c24fc5}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE JobEventReport :
STRUCT
	{attribute 'TcAnalytics'}
	subject	: STRING(256);
	 {attribute 'TcAnalytics'}
	job_id	: STRING(256);
	 {attribute 'TcAnalytics'}
	old_state	: STRING(16);
	 {attribute 'TcAnalytics'}
	new_state	: STRING(16);
	 {attribute 'TcAnalytics'}
	record_time	: jobmgmt.T_FILETIME64;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>